# Aimiko

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  contributing.md  docker-compose-dev.yml  migrations-runner.py  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  docker-build.yml  lint.yml  release.yml  tests.yml
bot/: aikobot.py  aikocore.py  aimikobot.py  aimikocore.py  amikobot.py
bot/cogs/: __init__.py  dev-tools.py  dev_tools.py  error_handler.py  events_handler.py  meta.py  prefix.py
bot/libs/ui/prefix/: views.py
bot/libs/utils/: __init__.py  checks.py  embeds.py  ensure_conns.py  formats.py  help.py  logger.py  prefix.py  time.py
bot/libs/utils/pages/: __init__.py  paginator.py  sources.py
docker/: Dockerfile  start.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/guides/dev/: dev-contributing.rst  index.rst  requirements.rst  setup.rst
envs/: dev.env  docker.env  prod.env
migrations/: 20230728_initial_up_rev1.sql
tests/utils/: test_converters.py  test_embeds.py  test_ensure_conns.py
